# plant-tracking

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.cursor/plans/: plant_tracking_scaffold_339858f4.plan.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 329b6abb162b_add_plants.py  330ae54039d4_add_plant_description.py  34453de2cf90_add_notes_and_actions.py  8401689043f3_add_flush_schedule.py  8c932c12fd37_add_photos.py  a1b2c3d4e5f6_add_cuttings.py
backend/src/backend/: __init__.py  config.py  db.py  main.py  reset_db.py
backend/src/backend/models/: __init__.py  action.py  dashboard.py  note.py  photo.py  plant.py  relations.py
backend/src/backend/routers/: actions.py  dashboard.py  deps.py  notes.py  photos.py  plant_actions.py  plant_photos.py  plants.py
backend/src/backend/services/: dashboard.py  photos.py  schedule.py
backend/tests/: conftest.py  test_actions.py  test_dashboard.py  test_health.py  test_monitor_schedule.py  test_notes.py  test_photos.py  test_plants.py  test_schedule.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: actions.ts  client.ts  dashboard.ts  notes.ts  photos.ts  plants.ts
frontend/src/components/: ActionLogSection.tsx  FlushStatusBadge.tsx  HealthBanner.tsx  Layout.tsx  NotesSection.tsx  PhotosSection.tsx  PlantForm.tsx  ScheduleSection.tsx
frontend/src/lib/: dates.ts  plant.ts  schedule.ts
frontend/src/pages/: DashboardPage.tsx  PlantDetailPage.tsx  PlantNewPage.tsx  PlantsPage.tsx
scripts/: backup.sh
